--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
+
 @import "./variables";
 @import "./mixins";
 
@@ -8,13 +9,12 @@ body {
   // font-size: $base-font-size;
   // line-height: 1.6;
   // color: $text-color;
-  font-family: "JetBrains Mono", monospace;
-    font-optical-sizing: auto;
-    // font-weight: <weight>;
-    font-style: normal;
-    color: $text-color;
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  // font-weight: <weight>;
+  font-style: normal;
+  color: $text-color;
 }
-
 
 h1 {
   font-size: $h1-font-size;
