--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -4,6 +4,9 @@
   padding-top: 100px;
 
   .content {
+    display: flex;
+    justify-content: center;
+    padding: 30px;
     .items {
       display: flex;
       justify-content: center;
@@ -11,12 +14,25 @@
       .text {
         position: relative;
         font-size: 30px;
+        z-index: 2;
+        right: 50px;
         h1 {
           color: $accent-color;
           font-family: $secondary-font;
         }
+        .year {
+          position: absolute;
+          top: 30px;
+          right: 80px;
+          transform: rotate(90deg);
+          font-size: 130px;
+          opacity: 15%;
+          overflow-x: hidden;
+          color: $tertiary-color;
+        }
       }
       button {
+        margin-top: 30px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -32,22 +48,15 @@
       }
     }
     .img {
-      position: relative;
-      width: 200px;
+      position: absolute;
+      width: 300px;
+      left: 120px;
       img {
         width: 100%;
         border-radius: 15px;
+        opacity: 80%;
       }
     }
-  }
-
-  .year {
-    position: absolute;
-    left: 0;
-    transform: rotate(90deg);
-    font-size: 150px;
-    opacity: 40%;
-    overflow-x: hidden;
   }
 }
 //
@@ -60,7 +69,6 @@
   flex-direction: column;
   justify-content: center;
   overflow: hidden;
-
   .line {
     background-color: rgb(0, 0, 0);
     width: 100%;
