--- a/src/footer/footer.scss
+++ b/src/footer/footer.scss
@@ -1,1 +1,73 @@
-@import url("../styles/main.scss");
+@import "../styles/main.scss";
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: white;
+  background-color: black;
+
+  .footer_content {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+    line-height: 2;
+
+    .col_1 {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      text-align: left;
+
+      h3 {
+        margin: 10px;
+        font-size: 50px;
+      }
+
+      p {
+        width: 100%;
+        text-align: center;
+        padding: 0 25px 25px 25px;
+      }
+    }
+    .col_23 {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      padding-bottom: 30px;
+
+      .col_2 {
+        text-align: center;
+        width: 100%;
+        padding: 0 25px 0 25px;
+        p {
+          font-size: 20px;
+          font-weight: bold;
+          text-decoration: underline;
+        }
+      }
+
+      .col_3 {
+        text-align: center;
+        width: 100%;
+        p {
+          font-size: 20px;
+          font-weight: bold;
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+
+  .footer_end {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: solid 0.1px rgb(153, 153, 153);
+    width: 100%;
+  }
+}
