--- a/src/header/header.scss
+++ b/src/header/header.scss
@@ -11,8 +11,7 @@ header {
   width: 100%;
   height: 70px;
   padding: 20px;
-  border-bottom: 0.5px solid rgba(0, 0, 0, 0.301);
-
+  z-index: 99999;
   .logo{
     font-weight: bold;
   }
