--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -6,7 +6,7 @@
   .content {
     display: flex;
     justify-content: center;
-    padding: 30px;
+    margin: 30px;
     .items {
       display: flex;
       justify-content: center;
@@ -49,7 +49,7 @@
     }
     .img {
       position: absolute;
-      width: 300px;
+      width: 250px;
       left: 120px;
       img {
         width: 100%;
@@ -170,7 +170,7 @@
 
     .item {
       padding: 0 25px 0 25px;
-      height: 220px;
+      height: 250px;
       width: 300px;
       display: flex;
       flex-direction: column;
@@ -268,7 +268,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 30px;
+    gap: 20px;
 
     img {
       width: 10%;
@@ -283,6 +283,7 @@
   width: 100%;
   padding: 0;
   margin: 0;
+
 
   .box {
     display: flex;
