--- a/src/header/header.scss
+++ b/src/header/header.scss
@@ -3,15 +3,16 @@
 
 header {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   background-color: $background-color;
   color: $accent-color;
   position: fixed;
   width: 100%;
   height: 70px;
-  padding: 20px;
   z-index: 99999;
+  box-sizing: border-box;
+  transition: transform 0.3s ease-in-out;
   .logo{
     
   }
@@ -23,3 +24,10 @@ header {
   }
 }
 // 
+.header.hide {
+  transform: translateY(-90%);
+}
+
+.header.show {
+  transform: translateY(0);
+}
