--- a/src/pages/contact.scss
+++ b/src/pages/contact.scss
@@ -1,1 +1,55 @@
-@import url("../styles/main.scss");
+@import "../styles/main.scss";
+
+.Contact_Main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 150px;
+  padding-bottom: 100px;
+
+  .contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 0 25px 0 25px;
+
+    .texts {
+      width: 100%;
+      .title {
+        text-align: center;
+        h3 {
+          font-size: 50px;
+          text-align: center;
+        }
+
+        p {
+          padding-top: 30px;
+          color: rgb(123, 123, 123);
+        }
+      }
+
+      .diaChi {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        padding-top: 50px;
+
+        .diaChi_Item {
+          line-height: 1.5;
+        }
+      }
+    }
+
+    .img {
+      padding-top: 50px;
+      width: 100%;
+
+      img {
+        width: 100%;
+        border-radius: 20px;
+      }
+    }
+  }
+}
