--- a/src/header/blackLine/blackLine.scss
+++ b/src/header/blackLine/blackLine.scss
@@ -1,3 +1,4 @@
+@import "../../styles/main.scss";
 .container {
   display: flex;
   position: fixed;
@@ -12,15 +13,18 @@
   font-size: 10px;
   font-weight: 600;
   .language {
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     gap: 5px;
+    @include respond-to(tablet) {
+      display: block;
+    }
     .items {
       display: flex;
       flex-direction: column;
       .vn {
-        display: none;
+        display: flex;
         justify-content: center;
         align-items: center;
         .lg-span {
@@ -37,6 +41,7 @@
         height: 50px;
         z-index: 10;
         border-radius: 5px;
+
       }
       a { 
         background-color: white;
@@ -54,5 +59,9 @@
   .account a {
     color: white;
     display: none;
+    @include respond-to(tablet){
+      display: block;
+    }
   }
+  
 }
