--- a/src/header/nav/nav.scss
+++ b/src/header/nav/nav.scss
@@ -7,7 +7,13 @@
   padding-top: 20px;
   z-index: 99998;
   transition: transform 0.3s ease-in-out;
-
+  @include respond-to(tablet){
+    padding-top: 28px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
   ul {
     list-style: none;
     margin: 0;
@@ -18,6 +24,12 @@
     flex-direction: column;
     gap: 20px;
     padding-bottom: 30px;
+    @include respond-to(tablet) {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+      }
 
     li {
       a {
@@ -41,24 +53,28 @@
   border-top: 1px solid rgba(0, 0, 0, 0.315);
   z-index: 99998;
   //
+  @include respond-to(tablet) {
+    top: 0;
+    left: 0;
+  }
 
 
 }
 
-@media (min-width: 768px) {
-  .menu {
-    display: flex;
+// @media (min-width: 768px) {
+//   .menu {
+//     display: flex;
 
-    ul {
-      display: flex;
+//     ul {
+//       display: flex;
 
-      li {
-        margin: 0 1rem;
-      }
-    }
-  }
+//       li {
+//         margin: 0 1rem;
+//       }
+//     }
+//   }
 
-  .menu-toggle {
-    display: none;
-  }
-}
+//   .menu-toggle {
+//     display: none;
+//   }
+// }
