--- a/src/header/nav/nav.scss
+++ b/src/header/nav/nav.scss
@@ -29,6 +29,7 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
+        margin-bottom: 0;
       }
 
     li {
@@ -54,8 +55,15 @@
   z-index: 99998;
   //
   @include respond-to(tablet) {
-    top: 0;
-    left: 0;
+    top: 1%;
+    z-index: 99995;
+    border-bottom: none;
+    border-top: none;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
   }
 
 
