--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -51,6 +51,13 @@
       position: absolute;
       width: 250px;
       left: 120px;
+      @include respond-to(tablet){
+        position: relative;
+        width: 300px;
+      }
+      @include respond-to(desktop){
+        width: 500px;
+      }
       img {
         width: 100%;
         border-radius: 15px;
@@ -167,6 +174,12 @@
     align-items: center;
     max-width: 80%;
     border-bottom: solid 0.1px rgb(153, 153, 153);
+    @include respond-to(tablet){
+      grid-template-columns: repeat(2, 1fr);
+    }
+    // @include respond-to(desktop){
+    //   grid-template-columns: repeat(4, 1fr);
+    // }
 
     .item {
       padding: 0 25px 0 25px;
