--- a/src/pages/productsList.scss
+++ b/src/pages/productsList.scss
@@ -1,3 +1,4 @@
+@import "../styles/main.scss";
 $primary-color: #ffffff;
 $secondary-color: #e0e0e0;
 
@@ -7,6 +8,12 @@ $secondary-color: #e0e0e0;
   gap: 20px;
   padding: 20px;
   max-width: 100%;
+  @include respond-to(tablet){
+    grid-template-columns: repeat(2, 1fr);
+  }
+  @include respond-to(desktop){
+    grid-template-columns: repeat(3, 1fr);
+  }
 
   .container_card {
     position: relative;
