--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -138,6 +138,9 @@
     align-items: center;
     gap: 20px;
     padding-bottom: 30px;
+    @include respond-to(desktop){
+      max-width: 60%;
+    }
   }
 
   .product-card {
@@ -164,6 +167,22 @@
     p {
       color: #888;
       font-size: 14px;
+    }
+
+    button {
+      display: inline-block;
+      padding: 8px 12px;
+      background-color: #dc3e37;
+      color: #fff;
+      border-radius: 4px;
+      text-decoration: none;
+      margin-top: 10px;
+      transition: background-color 0.3s;
+      border: none;
+
+      &:hover {
+        background-color: #f2965b;
+      }
     }
   }
 }
