--- a/src/pages/productsList.scss
+++ b/src/pages/productsList.scss
@@ -24,8 +24,8 @@ $secondary-color: #e0e0e0;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      width: 320px;
-      height: 450px;
+      width: 270px;
+      height: 400px;
       background: #ffffff;
       border-radius: 10px;
       overflow: hidden;
@@ -34,7 +34,7 @@ $secondary-color: #e0e0e0;
         transition: 0.5s;
 
         img {
-          width: 200px;
+          width: 120px;
         }
       }
 
@@ -42,10 +42,11 @@ $secondary-color: #e0e0e0;
         position: absolute;
         bottom: 0;
         width: 100%;
-        height: 100px;
+        height: 95px;
         text-align: center;
         transition: 1s;
         z-index: 0;
+        padding-top: 20px;
 
         &:hover {
           height: 410px;
@@ -72,6 +73,10 @@ $secondary-color: #e0e0e0;
           transition: 0.5s;
           opacity: 0;
           visibility: hidden;
+        }
+
+        .size {
+          padding-top: 90px;
         }
 
         &:hover .size {
@@ -162,15 +167,15 @@ $secondary-color: #e0e0e0;
             margin-left: 10px;
             margin-top: 20px;
             font-size: 14px;
-            background-color: $secondary-color;
-            color: #333;
+            background-color: #dc3e37;
+            color: #ffffff;
             border: none;
             border-radius: 5px;
             cursor: pointer;
             transition: background-color 0.3s;
 
             &:hover {
-              background-color: darken($secondary-color, 10%);
+              background-color: #f2965b;
             }
           }
         }
