--- a/src/header/header.scss
+++ b/src/header/header.scss
@@ -67,3 +67,13 @@ header {
     font-size: 20px;
   }
 }
+
+
+// hide, show header
+.header.hide {
+  transform: translateY(-73%);
+}
+
+.header.show {
+  transform: translateY(0);
+}
