--- a/src/header/blackLine/blackLine.scss
+++ b/src/header/blackLine/blackLine.scss
@@ -12,6 +12,16 @@
 
   font-size: 10px;
   font-weight: 600;
+  .blackLine_text{
+    padding-right: 8%;
+    a{
+      color: white;
+      text-decoration: underline;
+    }
+    @include respond-to(tablet){
+      padding-right: 0;
+    }
+  }
   .language {
     display: none;
     justify-content: center;
