--- a/src/header/nav/nav.scss
+++ b/src/header/nav/nav.scss
@@ -32,14 +32,32 @@
         margin-bottom: 0;
       }
 
-    li {
-      a {
-        color: $accent-color;
-        text-decoration: none;
-        font-weight: bolder;
-        font-size: 12px;
-      }
-    }
+        li {
+          a {
+            color: $accent-color;
+            text-decoration: none;
+            font-weight: bolder;
+            font-size: 12px;
+            position: relative;
+    
+            &::after {
+              content: "";
+              position: absolute;
+              left: 0;
+              bottom: -2px; // Khoảng cách dưới chữ
+              width: 0;
+              height: 2px; // Độ dày đường kẻ
+              background-color: $accent-color;
+              transition: width 0.5s ease;
+              opacity: 0.5;
+            }
+    
+            &:hover::after {
+              width: 100%;
+             // Đường kẻ mở rộng ra hết chiều dài của thẻ a
+            }
+          }
+        }
   }
 }
 
