--- a/src/pages/productsDetail.scss
+++ b/src/pages/productsDetail.scss
@@ -1,3 +1,4 @@
+@import "../styles/main.scss";
 .product-detail {
   padding-top: 250px;
   display: flex;
@@ -5,7 +6,7 @@
   align-items: center;
   flex-direction: column;
   .productDetail-item {
-    width: 500px;
+    width: 350px;
     border-radius: 10px;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.1);
     display: flex;
@@ -14,13 +15,19 @@
     flex-direction: column;
     padding: 50px;
     margin-bottom: 50px;
+    @include respond-to(tablet){
+      width: 500px;
+    }
     h1 {
       color: black;
     }
     .imgs {
-      width: 300px;
+      width: 200px;
       img {
         width: 100%;
+      }
+      @include respond-to(tablet){
+        width: 300px;
       }
     }
     .des {
