--- a/src/pages/products.scss
+++ b/src/pages/products.scss
@@ -23,59 +23,26 @@
     }
 }
 
-.products-container {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    padding: 20px;
-    background-color: rgb(250, 250, 250);
-}
-
-// .filterBar {
-//     max-width: 50%;
-//     position: sticky;
-//     top: 100px;
-//     align-self: flex-start;
-//     padding-top: 50px;
-// }
-
-.cart {
-    width: 100%;
-    max-width: 500px;
-    margin-bottom: 20px;
-}
-
-.products-content {
-    // display: grid;
-    // grid-template-columns: repeat(3, 1fr);
-    // gap: 20px;
-    // width: 100%;
-    display: flex;
-    justify-content: space-around;
-}
-
-
-/* Modal Styles */
-.modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+.products-section{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    .container{
+        display: flex;
+        flex-direction: column;
+        background-color: aqua;
+        width: 100%;
+        .filterBar{
+
+        }
+        .listProduct{
+
+        }
+    }
 }
 
-.modal-content {
-    background-color: rgb(255, 255, 255);
-    padding: 20px;
-    border-radius: 8px;
-    width: 80%;
-    height: 70%;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    position: relative;
-}
 
-/* Add any additional styling for ProductsDetail within modal */
+
+
+
