--- a/src/pages/products.scss
+++ b/src/pages/products.scss
@@ -1,6 +1,11 @@
 @import "../styles/main.scss";
-
-.banner {
+.products {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  .banner {
     background-color: rgb(233, 233, 233);
     padding: 120px 0px 120px 0px;
     display: flex;
@@ -11,38 +16,34 @@
     padding-top: 250px;
 
     .p_banner {
-        margin-top: 30px;
-        font-size: 50px;
+      margin-top: 30px;
+      font-size: 50px;
     }
 
     .selection {
-        a {
-            font-size: 13px;
-            margin: 10px;
-        }
+      a {
+        font-size: 13px;
+        margin: 10px;
+      }
     }
-}
+  }
 
-.products-section{
+  .products-section {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    .container{
-        display: flex;
-        flex-direction: column;
-        background-color: aqua;
-        width: 100%;
-        .filterBar{
+    height: 100%;
 
-        }
-        .listProduct{
+    .container {
+      display: flex;
+      flex-direction: column;
 
-        }
+      .filterBar {
+      }
+
+      .listProduct {
+      }
     }
+  }
 }
-
-
-
-
-
