--- a/src/header/header.scss
+++ b/src/header/header.scss
@@ -106,7 +106,7 @@ header {
     flex-direction: column;
     height: 100%;
     overflow-y: auto;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 
     // Thông báo khi giỏ hàng trống
@@ -136,7 +136,9 @@ header {
 
       .cart-item-details {
         flex: 1; // Cho phép nội dung chiếm phần còn lại
-
+        .sl{
+          text-align: right;
+        }
         .cart-item-actions {
           margin-top: 5px;
           text-align: right;
