--- a/src/pages/about.scss
+++ b/src/pages/about.scss
@@ -16,6 +16,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 100%;
 
     .p_banner {
       margin-top: 30px;
