--- a/src/header/header.scss
+++ b/src/header/header.scss
@@ -87,7 +87,7 @@ header {
   top: 130px;
   width: 400px;
   height: 70%;
-  border-radius: 10px;
+  border-radius: 10px 0  0 10px;
   background-color: $background-color;
   border: 1px solid $tertiary-color;
   padding: 20px;
