--- a/src/header/nav/nav.scss
+++ b/src/header/nav/nav.scss
@@ -47,7 +47,7 @@
               bottom: -2px; // Khoảng cách dưới chữ
               width: 0;
               height: 2px; // Độ dày đường kẻ
-              background-color: $accent-color;
+              background-color: $secondary-color;
               transition: width 0.5s ease;
               opacity: 0.5;
             }
