--- a/src/header/search/search.scss
+++ b/src/header/search/search.scss
@@ -2,28 +2,30 @@
 
 .search-modal {
   position: fixed;
-  top: -50px;
+  top: 0;
   left: 0;
   width: 100%;
-  height: calc(100% + 50px);
-  // background-color: rgba(0, 0, 0, 0.7);
+  height: calc(100% + 0px);
+  background-color: rgba(0, 0, 0, 0.7);
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   transform: translateY(-100%);
-  transition: transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
   z-index: 999999;
 
   &.visible {
     transform: translateY(0);
+    opacity: 1;
   }
 
   &.hidden {
     transform: translateY(-100%);
+    opacity: 0;
   }
 
   .modal-content {
-    background: white;
+    background: rgb(255, 255, 255);
     border-radius: 8px;
     padding: 16px;
     width: 90%;
@@ -33,6 +35,7 @@
     flex-direction: column;
     align-items: center;
     overflow: hidden;
+    margin-top: 50px;
 
     .close-btn {
       position: absolute; // Sử dụng position absolute
