--- a/src/index.scss
+++ b/src/index.scss
@@ -3,13 +3,18 @@
   overflow-x: hidden;
 }
 
-body, html {
+body,
+html {
   margin: 0;
   overflow-x: hidden;
 }
 
-a{
+a {
   color: black;
 }
 
-
+/*  */
+.no-scroll {
+  overflow: hidden;
+  height: 100%;
+}
