--- a/src/header/blackLine/blackLine.scss
+++ b/src/header/blackLine/blackLine.scss
@@ -12,13 +12,13 @@
 
   font-size: 10px;
   font-weight: 600;
-  .blackLine_text{
+  .blackLine_text {
     display: none;
-    a{
+    a {
       color: white;
       text-decoration: underline;
     }
-    @include respond-to(tablet){
+    @include respond-to(tablet) {
       display: block;
     }
   }
@@ -49,28 +49,39 @@
         height: 50px;
         z-index: 10;
         border-radius: 5px;
-
       }
-      a { 
+      a {
         background-color: white;
         display: flex;
         justify-content: center;
         align-items: center;
         gap: 30px;
         padding-top: 6px;
-        
 
         color: black;
       }
     }
-    @include respond-to(tablet){
+    @include respond-to(tablet) {
       margin-left: 0;
     }
   }
   .account a {
     color: white;
     display: block;
-    
   }
-  
+
+  .account {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    img {
+      border-radius: 50%;
+      width: 20px;
+      border: 1px solid white;
+      &:hover {
+        border: 1px solid $secondary-color;
+      }
+    }
+  }
 }
